--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix-template-remix",
+  "name": "poke-dix",
   "private": true,
   "description": "",
   "license": "",
@@ -7,12 +7,13 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/tailwind.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run dev:css\" \"netlify dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/tailwind.css",
-    "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
+    "@netlify/functions": "^0.10.0",
+    "cross-env": "^7.0.3",
     "@heroicons/react": "^1.0.6",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
