--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
-    "@netlify/functions": "^0.10.0",
-    "cross-env": "^7.0.3",
     "@heroicons/react": "^1.0.6",
+    "@netlify/functions": "^0.10.0",
+    "@remix-run/netlify": "^1.4.3",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "remix": "^1.4.3"
