--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-fast-compare": "^3.2.0",
     "remix": "^1.4.3"
   },
   "devDependencies": {
